# esp32-zig-starter

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
main/: CMakeLists.txt  build.zig
main/src/: log.zig  main.zig
